# arduino-mock

./: .gitignore  Arduino.h  CMakeLists.txt  RedBot.h  Wire.h
include/arduino-mock/: Arduino.h  SPI.h
src/: Arduino.cc  ArduinoMockAll.cc  RedBot.cc  SPI.cc  Wire.cc
test/: EEPROM_unittest.cc  Serial_unittest.cc  Spark_unittest.cc  Stream_unittest.cc  WiFi_unittest.cc  Wire_unittest.cc  serialHelper_unittest.cc
